[project]
name = "speed-race"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = ["numpy (>=2.4.2,<3.0.0)", "pygame (>=2.6.1,<3.0.0)"]

# [build-system]
# requires = ["poetry-core>=2.0.0,<3.0.0"]
# build-backend = "poetry.core.masonry.api"

[tool.uv.workspace]
members = ["potato_solver"]
