[project]
name = "potato-solver"
version = "0.1.0"
description = "Not a potato."
requires-python = ">=3.13"
authors = [
  { name = "Anshul Noori" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[build-system]
requires = ["nanobind>=1.3.2", "scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
build-verbosity = 1

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
